--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "core-js": "^2.5.4",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
+        "ngx-toastr": "^8.5.1",
         "rxjs": "^5.5.8",
         "yarn": "^1.5.1",
         "zone.js": "^0.8.20"
