--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
         "ngx-toastr": "^8.5.1",
+        "number-to-words": "^1.2.3",
         "rxjs": "^5.5.8",
         "yarn": "^1.5.1",
         "zone.js": "^0.8.20"
