--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "core-js": "^2.5.4",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
+        "ngx-spinner": "^2.0.1",
         "ngx-toastr": "^8.5.1",
         "number-to-words": "^1.2.3",
         "rxjs": "^5.5.8",
